--- a/marcheline.html
+++ b/marcheline.html
@@ -10,7 +10,7 @@
  <h1>Soy Marcheline</h1>
 
  <form action="mipagina.es" method="get">
-    <table border="1" align="center" cellspacing="20" cellpadding="5">
+    <table border="1" cellspacing="20" cellpadding="5">
 
         
         <tr>
@@ -19,7 +19,15 @@
         </tr>
         <tr>
             <td>APELLIDO</td>
-            <td><input type="password" value="visible" name="clave"></td>
+            <td><input type="text" name="usuario"></input></td>
+        </tr>
+        <tr>
+            <td>C.P.</td>
+            <td><input type="text" name="usuario"></input></td>
+        </tr>
+        <tr>
+            <td>FECHA DE NACIMIENTO</td>
+            <td><input type="text" name="usuario"></input></td>
         </tr>
         <tr>
             <td colspan="2" align="center"> <button type="submit">ENVIAR</button></td>
@@ -27,4 +35,38 @@
         </tr>
 
     </table>
+    <br><br>
+    <h2>
+        <ul>
+            <li>manzama</li>
+            <li>pera</li>
+            <li>naranja</li>
+            <li>melon</li>
+        </ul>
+        <tr>
+            <td>UNA LISTA DE 5 FRUTAS</td>
+        </tr>
+        <ol>
+            <li>Manzana
+                <ul>
+                    <li>golden</li>
+                    <li>reineta</li>
+                    <li>asada</li>
+                    <li>verde</li>
+                </ul>
+            </li>
+            <li>Pera</li>
+            <li>Platano</li>
+            <li>Melon</li>
+        </ol>
+    </h2>
+    <img 
+    src="https://unjamonaunbuenprecio.com/187-medium_default/jamon-5-jotas-de-sanchez-romero-carvajal.jpg" 
+    title="esto es un jamon">
 
+<a href="https://www.google.es/search?q=jamon" >buscar jamon</a>
+
+<br><br><br><br><br><br><br><br>
+</body>
+
+</html>
