--- a/daniel.html
+++ b/daniel.html
@@ -9,6 +9,17 @@ table border="1" cellspacing="2" cellpading="6">
     </tr>
     <tr>
         <td>apellidos</td>
+    <td><input type="text" name="apellidos"></td>
+    <tr>
+<td>CP</td>
+
+
+
+
+
+
+
+
     </tr>
 
 
