--- a/html/profe.html
+++ b/html/profe.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    soy el profesor
+    soy Daniel Góoooómeeez Paaaaarraaaaaaaa
+    
 </body>
 </html>
