--- a/html/profe.html
+++ b/html/profe.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    soy fjd
-    soy el dab
-    Bueno bueno... hay que esforzarnos! epc
-    soy asj
+     soy edu macassi
 </body>
 </html>
