--- a/marcheline.html
+++ b/marcheline.html
@@ -48,7 +48,7 @@
         </tr>
         <ol>
             <li>Manzana
-                <ul>
+                <ul type="square">
                     <li>golden</li>
                     <li>reineta</li>
                     <li>asada</li>
