--- a/html/profe.html
+++ b/html/profe.html
@@ -19,5 +19,17 @@
     soy asj
     soy Daniel Góoooómeeez Paaaaarraaaaaaaa
      soy di
+
+     <form action="">
+
+Selecciona poblacion:<select name="poblacion">
+
+<option value="28">Madrid</option>
+<option value="08">Barcelona</option>
+<option value="06">Badajoz</option>
+
+</select>
+
+     </form>
 </body>
 </html>
