--- a/html/profe.html
+++ b/html/profe.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-     soy edu macassi
+    soy edu macassi
     soy op
     soy el profesor y hago aqui un cambio
     soy fjd
@@ -15,6 +17,23 @@
     Bueno bueno... hay que esforzarnos! epc
     soy asj
     soy Daniel Góoooómeeez Paaaaarraaaaaaaa
-     soy di
+    soy di
+    <form action="">
+        Selecciona Poblacion:<br> <select name="poblacion">
+            <option value="0">Selecciona poblacion ...</option>
+            <option value="28">Madrid</option>
+            <option value="08">Barcelona</option>
+            <option value="06">Badajoz</option</select>
+                <button type="submit">ENVIAR</button>
+                <br>
+                selecciona deportes: <br>
+                futbol: <input type="checkbox" name="futbol"><br>
+                futbol: <input type="checkbox" name="futbol"><br>
+                futbol: <input type="checkbox" name="futbol"><br>
+                futbol: <input type="checkbox" name="futbol"><br>
+ sexo: <br>
+ hombre: <input type="radio" value="hombre" name="sexo"><br>
+ mujer: <input type="radio" value="mujer" name="sexo"><br>
+</form>
 </body>
 </html>
