--- a/html/profe.html
+++ b/html/profe.html
@@ -11,6 +11,6 @@
     soy el dab
     Bueno bueno... hay que esforzarnos! epc
     soy asj
-    soy Daniel Góoooómeeez Paaaaarraaaaaaaa
+    soy Daniel Góoooómeeez Paaaaarraaaaaaaaa
 </body>
 </html>
