trabajo hoy 2 de noviembre

--- a/html/profe.html
+++ b/html/profe.html
@@ -7,30 +7,77 @@
     <title>Document</title>
 </head>
 <body>
-    soy dlg
-    soy marcheli
-    soy marcheline
-     soy edu macassi
-    soy op
-    soy el profesor y hago aqui un cambio
-    soy fjd
-    soy el dab
-    Bueno bueno... hay que esforzarnos! epc
-    soy asj
-    soy Daniel Góoooómeeez Paaaaarraaaaaaaa
-     soy di
+    <h1>Soy Adán Sánchez</h1>
+    <h2>Soy Adán Sánchez</h2>
+    <h3>Soy Adán Sánchez</h3>
+    <h4>Soy Adán Sánchez</h4>
+    <h5>Soy Adán Sánchez</h5>
+    <h6>Soy Adán Sánchez</h6>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <table border="1px">
+            <tr>
+                <td>----</td>
+                <td>----</td>
+                <td rowspan="2">----</td>
+            </tr>
+            <tr>
+                <td>----</td>
+                <td>----</td>
+            </tr>
+            <tr>
+                <td>----</td>
+                <td>----</td>
+                <td>----</td>
+            </tr>
+            <tr>
+                <td>----</td>
+                <td colspan="2">----</td>
+            
+            </tr>
+        </table>
+        <ol>
+            <li>Manzana</li>
+            <li>Platano</li>
+            <li>Melón</li>
+            <li>Limón</li>
+            <li>Caqui</li>
+        </ol>
+        <form action="">
+            Nombre: <input type="text">
+            DNI: <input type="text">
+            <br>
+            Edad: <input type="number"><br>
+            Fecha de Nacimiento <input type="date">
+            <hr>
+            Deportes que practicas: <br>
+            Futbol:        <input type="checkbox" name="Futbol" id=""> <br>
+            Baloncesto:    <input type="checkbox" name="Baloncesto" id=""> <br>
+            Voleybol:          <input type="checkbox" name="Voleybol" id=""> <br>
+            Futsal: <input type="checkbox" name="Futsal" id=""> <br>
+            Natacion:      <input type="checkbox" name="Natacion" id=""> <br>
+            <br>
+            Nacionalidad:
+            España: <input type="radio" name="Nacionalidad">
+            Francia: <input type="radio" name="Nacionalidad">
+            Portugal: <input type="radio" name="Nacionalidad">
+            Malta: <input type="radio" name="Nacionalidad">
+            <hr>
+            Ciudad actual: <select name="ciudad" id="">
+                <option value="01">Cádiz</option>
+                <option value="02">Mádrid</option>
+                <option value="03">Barcelona</option>
+                <option value="04">Bilbao</option>
+                <option value="05">Granada</option>
 
-     <form action="">
-
-Selecciona poblacion:<select name="poblacion">
-
-<option value="28">Madrid</option>
-<option value="08">Barcelona</option>
-<option value="06">Badajoz</option>
-
-</select>
-
-     </form>
->>>>>>> 9e0fc8028594c42cf6ed976aef973b99e4dfa447
+            </select><br>
+            <hr>
+            Observaciones: <textarea name="" id="" cols="30" rows="10">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
+        </form>
 </body>
 </html>
