--- a/inditex.html
+++ b/inditex.html
@@ -11,7 +11,7 @@
     <h2>Soy Edu</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore consectetur mollitia quibusdam laboriosam iure quam aperiam similique repellendus voluptatibus necessitatibus, libero aspernatur beatae numquam atque voluptatem tempore aliquid culpa architecto.</p>
     <br>
-    <table border="1">
+    <table border width="25%">
         <tr>
             <td><br></td>
             <td><br></td>
@@ -23,11 +23,11 @@
 
         </tr>
             <td><br></td>
-            <td>Prueba</td>
-            <td>Prueba</td>
+            <td><br></td>
+            <td><br></td>
         <tr>
-            <td>Prueba</td>
-            <td colspan="2">Prueba</td>
+            <td><br></td>
+            <td colspan="2"><br></td>
         </tr>
         
     </table>
