--- a/html/index.html
+++ b/html/index.html
@@ -1,94 +1,99 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
 </head>
 
 <body>
-    <h1>texto h1</h1>
-    <h2>texto h2</h2>
-    <h3>texto h3</h3>
-    <h4>texto h4</h4>
-    <h5>texto h5</h5>
-    <h6>texto h6</h6>
-    <p>dfghdgfh gfd fdghdfgh d hfgh d hdfgh fgdh dfgh dfg hfgd hfgd hfgdh </p>
 
-    <p>hdgfh fdg dfgh dfgh dfg gfd gfdh fgdh dfgh fgh fdgh dfgh gfh dfgh</p>
+    <h1>Soy Richard</h1>
+    <h2>Soy Richard</h2>
+    <h3>Soy Richard</h3>
+    <h4>Soy Richard</h4>
+    <h5>Soy Richard</h5>
+    <h6>Soy Richard</h6>
 
-    <b>negrita</b><br><i>italica</i><br><strong>negrita</strong><br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repudiandae illum doloribus dolorum eius sed
+        dolores. Explicabo odio necessitatibus dicta.</p>
 
+    <table border="2px">
+        <tr>
+            <td colspan="2">
+                Lorem, ipsum.
+            </td>
+           
+            <td>
+                Lorem, ipsum.
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Lorem, ipsum.
+            </td>
+            <td rowspan="2">
+                Lorem, ipsum.
+            </td>
+            <td>
+                Lorem, ipsum.
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Lorem, ipsum.
+            </td>
+            <td rowspan="2">
+                Lorem, ipsum.
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                Lorem, ipsum.
+            </td>          
+        </tr>
 
-    <form action="url destino" method="get">
-        Selecciona fecha:<input type="time"><br>
-        color: <input type="color"><br>
-        DNI: <input type="text" value="525658M" pattern="[0-9]{8}[A-Z]" placeholder="escribe tu dni" required ar><br>
-        edad: <input type="number" min="18" max="65">
-    </form>
-
-    codigo postal <input type="text" size="5" maxlength="5">
-
-
-    <form action="mipagina.es" method="get">
-        <table border="1" align="center" cellspacing="20" cellpadding="5">
-
-
-            <tr>
-                <th>dato</th>
-                <th>valor</th>
-            </tr>
-
-
-            <tr>
-                <td>USUARIO</td>
-                <td><input type="text" name="usuario"></input></td>
-            </tr>
-            <tr>
-                <td>CLAVE</td>
-                <td><input type="password" value="visible" name="clave"></td>
-            </tr>
-            <tr>
-                <td colspan="2" align="center"> <button type="submit">ENVIAR</button></td>
-
-            </tr>
-
-        </table>
-    </form>
-    <br><br>
-    <h1>
-        <ul>
-            <li>manzama</li>
-            <li>pera</li>
-            <li>naranja</li>
-            <li>melon</li>
-        </ul>
-
-        <ol>
-            <li>manzama</li>
-            <li>frutas:
-                <ol type="a" start="5">
-                    <li>manzama</li>
-                    <li>pera</li>
-                    <li>naranja</li>
-                    <li>melon</li>
-                </ol>
-            </li>
-            <li>naranja</li>
-            <li>melon</li>
-        </ol>
-    </h1>
-
-    <img 
-    src="https://unjamonaunbuenprecio.com/187-medium_default/jamon-5-jotas-de-sanchez-romero-carvajal.jpg" 
-    title="esto es un jamon">
-
-<a href="https://www.google.es/search?q=jamon" >buscar jamon</a>
-
-<br><br><br><br><br><br><br><br>
+    </table>
+    <ol>
+        <li>Manzana</li>
+        <li>Naranja</li>
+        <li>Pera</li>
+        <li>Plátano</li>
+        <li>Maracuyá</li>
+    </ol>
+    <ul>
+        <li>Manzana</li>
+        <li>Naranja</li>
+        <li>Pera</li>
+        <li>Plátano</li>
+        <li>Maracuyá</li>
+    </ul>
+   <form method="get">
+        <p>Nombre</p></Nombre:p> <input type="text"><br>
+        <p>DNI</p> <input type="text"><br>
+        <p>Edad</p>  <input type="text"><br>
+        <p>Fecha Nacimiento</p> <input type="text"><br>
+        <p>Selecciona los deportes: </p>
+        <p>Fútbol</p><input type="checkbox">
+        <p>Baloncesto</p><input type="checkbox">
+        <p>Tenis</p><input type="checkbox">
+        <p>Parapente</p><input type="checkbox">
+        <p>Ajedrez</p><input type="checkbox">
+        <p>Selecciona Nacionalidad: </p><br>
+        <p>España</p><input type="radio" name="pais">
+        <p>Colombia</p><input type="radio" name="pais">
+        <p>Portugal</p><input type="radio" name="pais">
+        <p>Francia</p><input type="radio" name="pais">
+        <p>Selecciona una ciudad: </p><select name="ciudad">
+        <option value="ciudad">Madrid</option>
+        <option value="ciudad">Asturias</option>
+        <option value="ciudad">Málaga</option>
+        <option value="ciudad">Valencia</option>
+        <option value="ciudad">Barcelona</option>
+        </select>
+           </form>
 </body>
 
 </html>
