--- a/html/index.html
+++ b/html/index.html
@@ -10,85 +10,72 @@
 </head>
 
 <body>
-    <h1>texto h1</h1>
-    <h2>texto h2</h2>
-    <h3>texto h3</h3>
-    <h4>texto h4</h4>
-    <h5>texto h5</h5>
-    <h6>texto h6</h6>
-    <p>dfghdgfh gfd fdghdfgh d hfgh d hdfgh fgdh dfgh dfg hfgd hfgd hfgdh </p>
-
-    <p>hdgfh fdg dfgh dfgh dfg gfd gfdh fgdh dfgh fgh fdgh dfgh gfh dfgh</p>
-
-    <b>negrita</b><br><i>italica</i><br><strong>negrita</strong><br>
-
-
-    <form action="url destino" method="get">
-        Selecciona fecha:<input type="time"><br>
-        color: <input type="color"><br>
-        DNI: <input type="text" value="525658M" pattern="[0-9]{8}[A-Z]" placeholder="escribe tu dni" required ar><br>
-        edad: <input type="number" min="18" max="65">
-    </form>
-
-    codigo postal <input type="text" size="5" maxlength="5">
-
-
-    <form action="mipagina.es" method="get">
-        <table border="1" align="center" cellspacing="20" cellpadding="5">
-
-
+    <div>
+        <h1>Soy Denis</h1>
+        <h2>Soy Denis</h2>
+        <h3>Soy Denis</h3>
+        <h4>Soy Denis</h4>
+        <h5>Soy Denis</h5>
+        <h6>Soy Denis</h6>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo eligendi atque mollitia architecto culpa qui
+            temporibus quia explicabo voluptatem rem, voluptatibus voluptas quas labore nobis cupiditate minus officiis
+            quis sapiente.</p>
+        <table border="1"ssss>
             <tr>
-                <th>dato</th>
-                <th>valor</th>
-            </tr>
-
-
-            <tr>
-                <td>USUARIO</td>
-                <td><input type="text" name="usuario"></input></td>
+                <td colspan="2">Nombre</td>
+                <td>Fecha</td>
+                
             </tr>
             <tr>
-                <td>CLAVE</td>
-                <td><input type="password" value="visible" name="clave"></td>
+                <td>afd</td>
+                <td>afd</td>
+
             </tr>
             <tr>
-                <td colspan="2" align="center"> <button type="submit">ENVIAR</button></td>
+                <td>afd</td>
+                <td>afd</td>
+                
+            </tr>
+            <tr>
+                <td>afd</td>
+                <td rowspan="2">afd</td>
 
             </tr>
-
         </table>
+
+    </div>
+    <br>
+    <form action="">
+        Nombre: <input type="text" name="Nombre">
+        DNI: <input type="text" name="DNI" pattern="[0-9]{8}[A-Z]{1}">
+        Edad: <input type="number" value="Edad">
+        Fecha: <input type="datetime"><br>
+
+        Selecciona un deporte: <br>
+        <input name="deportes" type="checkbox">Ciclismo <br>
+        <input name="deportes" type="checkbox"> Baloncesto <br>
+        <input name="deportes" type="checkbox"> Fútbol <br>
+        <input name="deportes" type="checkbox"> Golf <br>
+        <input name="deportes" type="checkbox"> Natación <br>
+        Nacionalidad <br>
+        <input type="radio" name="nacionalidad" value="italia"> italiana
+        <input type="radio" name="nacionalidad" value="portugal"> portuguesa
+        <input type="radio" name="nacionalidad" value="rusia"> rusa
+        <input type="radio" name="nacionalidad" value="argentina"> Argentina
+
+        <br>
+
+        <select name="ciudades">
+            <option value="0">Elige una ciudad</option>
+            <option value="madrid">Madrid</option>
+            <option value="barcelona">Barcelona</option>
+            <option value="sevilla">Sevilla</option>
+            <option value="lugo"> Lugo</option>
+        </select>
     </form>
-    <br><br>
-    <h1>
-        <ul>
-            <li>manzama</li>
-            <li>pera</li>
-            <li>naranja</li>
-            <li>melon</li>
-        </ul>
-
-        <ol>
-            <li>manzama</li>
-            <li>frutas:
-                <ol type="a" start="5">
-                    <li>manzama</li>
-                    <li>pera</li>
-                    <li>naranja</li>
-                    <li>melon</li>
-                </ol>
-            </li>
-            <li>naranja</li>
-            <li>melon</li>
-        </ol>
-    </h1>
-
-    <img 
-    src="https://unjamonaunbuenprecio.com/187-medium_default/jamon-5-jotas-de-sanchez-romero-carvajal.jpg" 
-    title="esto es un jamon">
-
-<a href="https://www.google.es/search?q=jamon" >buscar jamon</a>
-
-<br><br><br><br><br><br><br><br>
+<textarea>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit aut suscipit est pariatur illo? Dolore optio libero consectetur qui quidem repudiandae, repellat nobis veritatis, quasi, harum inventore quisquam. Veniam, quaerat!
+</textarea>
 </body>
 
 </html>
