--- a/html/index.html
+++ b/html/index.html
@@ -75,7 +75,8 @@
     </form>
 <textarea>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit aut suscipit est pariatur illo? Dolore optio libero consectetur qui quidem repudiandae, repellat nobis veritatis, quasi, harum inventore quisquam. Veniam, quaerat!
-</textarea>
+</textarea><br>
+
 </body>
 
 </html>
