--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    ffdgfdgfd
+    <h1>soy h1</h1>
+    <h2>soy h2</h2>
+    <h3>soy h3</h3>
+    <h4>soy h4</h4>
+    <h5>soy h5</h5>
+    <h6>soy h6</h6>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores alias odit sed excepturi facilis, illo, quod
+        reprehenderit iusto possimus voluptates quo provident placeat omnis commodi magnam iste voluptatum a voluptate.
+    </p>
+
+
+    <p>
+    <table border="10">
+
+        <tr>
+            <td></td>
+            <td colspan=”2”>Hola</td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td rowspan=”2”>hola</td>
+            <td></td>
+            <td></td>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    </p>
+    <br><br>
+    <p>
+    <ol type="number">
+        <li>manzanas</li>
+        <li>peras</li>
+        <li>chirimollas</li>
+        <li>bananas</li>
+        <li>naranjas</li>
+    </ol>
+    </p>
+    <br><br>
+    <p>
+        Formulario: <br>
+        Nombre y Apellidos <input type="text" name="Nombre" placeholder="Escriba nombre y apellidos"> <br><br>
+        DNI <input type="text" placeholder="Su DNI o documento de identidad" pattern="[0-9]{8}{A-Z}"> <br><br>
+        Edad <input type="number" pattern="[0-100]"><br><br>
+        Fecha de nacimiento <input type="date" placeholder="Su edad"><br><br>
+        Futboll<input type="checkbox" name="Futboll"><br>
+        Baloncesto<input type="checkbox" name="Baloncesto"><br>
+        Rugby<input type="checkbox" name="Rugby"><br>
+        Natación<input type="checkbox" name="Natación"><br>
+        Atletismo<input type="checkbox" name="Atletismo"><br>
+<br><br>
+        Pais: <br>
+        España<input type="radio" name="España" id=""><br>
+        Alemania<input type="radio" name="España" id=""><br>
+        Rusia<input type="radio" name="España" id=""><br>
+        Italia<input type="radio" name="España" id=""><br><br>
+
+        selecciona poblacion: <select name="poblacion">
+            <option value="0"> Seleccione población</option>
+            <option value="28"> Madrid</option>
+            <option value="08"> barcelona</option>
+            <option value="06"> badajoz</option>
+            <option value="100">sevilla</option>
+            <br><br>
+</p>
 </body>
+
 </html>
