--- a/html/index.html
+++ b/html/index.html
@@ -48,11 +48,11 @@
     <br><br>
     <p>
     <ol type="number">
-        <li>manzanas</li>
-        <li>peras</li>
-        <li>chirimollas</li>
-        <li>bananas</li>
-        <li>naranjas</li>
+        <li>Manzanas</li>
+        <li>Peras</li>
+        <li>Chirimollas</li>
+        <li>Bananas</li>
+        <li>Naranjas</li>
     </ol>
     </p>
     <br><br>
@@ -77,9 +77,9 @@
         selecciona poblacion: <select name="poblacion">
             <option value="0"> Seleccione población</option>
             <option value="28"> Madrid</option>
-            <option value="08"> barcelona</option>
-            <option value="06"> badajoz</option>
-            <option value="100">sevilla</option>
+            <option value="08"> Barcelona</option>
+            <option value="06"> Badajoz</option>
+            <option value="100">Sevilla</option>
             <br><br>
 </p>
 </body>
