--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,7 @@
     <br>
     <form action="">
         Nombre: <input type="text" name="Nombre">
-        DNI: <input type="text" name="DNI" pattern="[0-9]{8}[A-Z]{1}">
+        DNI: <input type="text" value="DNI" pattern="[0-9]{8}[A-Z]{1}">
         Edad: <input type="number" value="Edad">
         Fecha: <input type="datetime"><br>
 
