--- a/html/index.html
+++ b/html/index.html
@@ -58,9 +58,9 @@
         <input name="deportes" type="checkbox"> Golf <br>
         <input name="deportes" type="checkbox"> Natación <br>
         Nacionalidad <br>
-        <input type="radio" name="nacionalidad" value="italia"> italiana
-        <input type="radio" name="nacionalidad" value="portugal"> portuguesa
-        <input type="radio" name="nacionalidad" value="rusia"> rusa
+        <input name="nacionalidad" type="radio">Italiana
+        <input type="radio" name="nacionalidad" value="portugal"> Portuguesa
+        <input type="radio" name="nacionalidad" value="rusia"> Rusa
         <input type="radio" name="nacionalidad" value="argentina"> Argentina
 
         <br>
