--- a/html/index.html
+++ b/html/index.html
@@ -62,9 +62,9 @@
         <input name="deportes" type="checkbox"> Natación <br>
         Nacionalidad <br>
         <input name="nacionalidad" type="radio">Italiana
-        <input type="radio" name="nacionalidad" value="portugal"> Portuguesa
-        <input type="radio" name="nacionalidad" value="rusia"> Rusa
-        <input type="radio" name="nacionalidad" value="argentina"> Argentina
+        <input type="radio" name="nacionalidad"> Portuguesa
+        <input type="radio" name="nacionalidad"> Rusa
+        <input type="radio" name="nacionalidad"> Argentina
 
         <br>
 
