--- a/html/index.html
+++ b/html/index.html
@@ -96,9 +96,9 @@
             <tr>
                 <td>Selecciona nacionalidad:</td>
                 <td>
-                    <input type="radio" name="pais" value="espana">España <input type="radio" name="pais"
-                        value="italia">Italia <input type="radio" name="pais" value="francia">Francia <input
-                        type="radio" name="pais" value="alemania">Alemania
+                    <label><input type="radio" name="pais" value="espana">España <label></label><input type="radio" name="pais"
+                    value="italia">Italia </label><label><input type="radio" name="pais" value="francia">Francia </label><label><input
+                        type="radio" name="pais" value="alemania">Alemania</label>
                 </td>
             </tr>
             <tr>
