--- a/html/index.html
+++ b/html/index.html
@@ -45,10 +45,10 @@
             <form>
                 <action="ejemplo.es" metod="get">
                     </action>
-                    Nombre:<input type="text" name="Nombre">
-                    DNI:<input type="text" name="dni">
-                    Edad:<input type="number" name="edad">
-                    Fecha Nacimiento:<input type="date" name="Fecha">
+                    Nombre:<input type="text" name="Nombre"><br>
+                    DNI:<input type="text" name="dni"><br>
+                    Edad:<input type="number" name="edad"><br>
+                    Fecha Nacimiento:<input type="date" name="Fecha"><br>
             </form><br><br><br>
             SELECCIONA DEPORTES: <br>
             Natación <input name="deportes" type="checkbox"><br>
