codigo arreglado. Ejercicio al 100%

--- a/html/index.html
+++ b/html/index.html
@@ -21,27 +21,27 @@
 
 
     <p>
-    <table border="10">
+    <table border="1">
 
         <tr>
-            <td></td>
-            <td colspan=”2”>Hola</td>
-            <td></td>
+            <td>TD11</td>
+            <td colspan="2">TD12</td>
+           
         </tr>
 
         <tr>
-            <td rowspan=”2”>hola</td>
-            <td></td>
-            <td></td>
+            <td rowspan="2">TD21</td>
+            <td>TD22</td>
+            <td>TD23</td>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            
+            <td>TD32</td>
+            <td>TD33</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>TD41</td>
+            <td>TD42</td>
+            <td>TD43</td>
         </tr>
     </table>
     </p>
