cambios etiquetas label

--- a/html/index.html
+++ b/html/index.html
@@ -56,16 +56,16 @@
 
 
         Selecciona un deporte: <br>
-        <input name="deportes" type="checkbox">Ciclismo <br>
-        <input name="deportes" type="checkbox"> Baloncesto <br>
-        <input name="deportes" type="checkbox"> Fútbol <br>
-        <input name="deportes" type="checkbox"> Golf <br>
-        <input name="deportes" type="checkbox"> Natación <br>
+        <label><input type="checkbox" name="deportes">Ciclismo </label><br>
+        <label><input type="checkbox" name="deportes"> Baloncesto </label><br>
+        <label><input type="checkbox" name="deportes"> Fútbol </label><br>
+        <label><input type="checkbox" name="deportes"> Golf </label><br>
+        <label><input type="checkbox" name="deportes"> Natación </label><br>
         Nacionalidad <br>
-        <input name="nacionalidad" type="radio">Italiana
-        <input type="radio" name="nacionalidad"> Portuguesa
-        <input type="radio" name="nacionalidad"> Rusa
-        <input type="radio" name="nacionalidad"> Argentina
+        <label><input name="nacionalidad" type="radio">Italiana </label>
+        <label><input type="radio" name="nacionalidad"> Portuguesa </label>
+        <label><input type="radio" name="nacionalidad"> Rusa </label>
+        <label><input type="radio" name="nacionalidad"> Argentina </label>
 
         <br>
 
