etiqueta full label

--- a/html/index.html
+++ b/html/index.html
@@ -62,7 +62,7 @@
         <label><input type="checkbox" name="deportes"> Golf </label><br>
         <label><input type="checkbox" name="deportes"> Natación </label><br>
         Nacionalidad <br>
-        <label><input name="nacionalidad" type="radio">Italiana </label>
+        <label><input type="radio" name="nacionalidad">Italiana </label>
         <label><input type="radio" name="nacionalidad"> Portuguesa </label>
         <label><input type="radio" name="nacionalidad"> Rusa </label>
         <label><input type="radio" name="nacionalidad"> Argentina </label>
