--- a/html/index.html
+++ b/html/index.html
@@ -48,6 +48,13 @@
 
     </div>
     <br>
+    <ol>
+        <li>Manzana</li>
+        <li>Pera</li>
+        <li>Aguacate</li>
+        <li>Plátano</li>
+        <li>Fresa</li>
+    </ol><br>
     <form action="">
         <label> Nombre: <input type="text" name="Nombre"></label>
         <label> DNI: <input type="text" name="DNI" pattern="[0-9]{8}[A-Z]{1}"></label>
