--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pruebas HTML</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
         aliquid nihil sapiente placeat odit doloremque rerum, corporis expedita, velit cupiditate a, nesciunt ex
         doloribus.</p>
 
-    <table border="1" cellpadding="10">
+    <table cellpadding="10" class="tabla1">
         <tr>
             <td rowspan="2">Texto de prueba</td>
             <td>Texto de prueba</td>
@@ -48,7 +49,7 @@
         <li>Pomelo</li>
         <li>Melocotón</li>
     </ol>
-    <table>
+    <table class="tabla2">
         <form action="#" method="get">
             <tr>
                 <td>Nombre:</td>
