--- a/html/index.html
+++ b/html/index.html
@@ -59,9 +59,9 @@
     <p>
         Formulario: <br>
         Nombre y Apellidos <input type="text" name="Nombre" placeholder="Escriba nombre y apellidos"> <br><br>
-        DNI <input type="text" placeholder="Su DNI o documento de identidad" pattern="[0-9]{8}{A-Z}"> <br><br>
-        Edad <input type="number" pattern="[0-100]"><br><br>
-        Fecha de nacimiento <input type="date" placeholder="Su edad"><br><br>
+        DNI <input type="text" name="Dni" placeholder="Su DNI o documento de identidad" pattern="[0-9]{8}{A-Z}"> <br><br>
+        Edad <input type="number" name="Edad" pattern="[0-100]"><br><br>
+        Fecha de nacimiento <input type="date" name="Fecha de nacimiento" placeholder="Su edad"><br><br>
         Futboll<input type="checkbox" name="Futboll"><br>
         Baloncesto<input type="checkbox" name="Baloncesto"><br>
         Rugby<input type="checkbox" name="Rugby"><br>
@@ -70,9 +70,9 @@
 <br><br>
         Pais: <br>
         España<input type="radio" name="España" id=""><br>
-        Alemania<input type="radio" name="España" id=""><br>
-        Rusia<input type="radio" name="España" id=""><br>
-        Italia<input type="radio" name="España" id=""><br><br>
+        Alemania<input type="radio" name="Alemania" id=""><br>
+        Rusia<input type="radio" name="Rusia" id=""><br>
+        Italia<input type="radio" name="Italia" id=""><br><br>
 
         selecciona poblacion: <select name="poblacion">
             <option value="0"> Seleccione población</option>
