--- a/profe.html
+++ b/profe.html
@@ -49,18 +49,18 @@
         Fecha Nacimiento: <input type="date"> <br>
         <br><br>
         Deportes: <br>
-        Tenis <input type="checkbox" name="Tenis">
-        Billar <input type="checkbox" name="Billar">
-        Ajedrez <input type="checkbox" name="ajedrez">
-        Futbol <input type="checkbox" name="Futbol">
-        Baloncesto <input type="checkbox" name="Baloncesto">
+        Tenis <input type="checkbox" name="Tenis"><br>
+        Billar <input type="checkbox" name="Billar"><br>
+        Ajedrez <input type="checkbox" name="ajedrez"><br>
+        Futbol <input type="checkbox" name="Futbol"><br>
+        Baloncesto <input type="checkbox" name="Baloncesto"><br>
         <br>
         <br>
         Nacionalidad: <br>
-        Peru <input type="radio" name="nac">
-        Argentina <input type="radio" name="nac">
-        Francia <input type="radio" name="nac">
-        España <input type="radio" name="nac">
+        Peru <input type="radio" name="nac"><br>
+        Argentina <input type="radio" name="nac"><br>
+        Francia <input type="radio" name="nac"><br>
+        España <input type="radio" name="nac"><br>
     <br>
     <br>
         Ciudad :<select name="ciudad" id="">
