mismo name en los radios

--- a/html/index.html
+++ b/html/index.html
@@ -69,10 +69,10 @@
         Atletismo<input type="checkbox" name="Atletismo"><br>
 <br><br>
         Pais: <br>
-        España<input type="radio" name="España" id=""><br>
-        Alemania<input type="radio" name="Alemania" id=""><br>
-        Rusia<input type="radio" name="Rusia" id=""><br>
-        Italia<input type="radio" name="Italia" id=""><br><br>
+        España<input type="radio" name="origen" id=""><br>
+        Alemania<input type="radio" name="origen" id=""><br>
+        Rusia<input type="radio" name="origen" id=""><br>
+        Italia<input type="radio" name="origen" id=""><br><br>
 
         selecciona poblacion: <select name="poblacion">
             <option value="0"> Seleccione población</option>
