--- a/html/index.html
+++ b/html/index.html
@@ -63,11 +63,11 @@
 
 
         Selecciona un deporte: <br>
-        <label><input type="checkbox" name="deportes">Ciclismo </label><br>
-        <label><input type="checkbox" name="deportes"> Baloncesto </label><br>
-        <label><input type="checkbox" name="deportes"> Fútbol </label><br>
-        <label><input type="checkbox" name="deportes"> Golf </label><br>
-        <label><input type="checkbox" name="deportes"> Natación </label><br>
+        <label><input type="checkbox" name="ciclismo">Ciclismo </label><br>
+        <label><input type="checkbox" name="baloncesto"> Baloncesto </label><br>
+        <label><input type="checkbox" name="futbol"> Fútbol </label><br>
+        <label><input type="checkbox" name="golf"> Golf </label><br>
+        <label><input type="checkbox" name="natacion"> Natación </label><br>
         Nacionalidad <br>
         <label><input type="radio" name="nacionalidad">Italiana </label>
         <label><input type="radio" name="nacionalidad"> Portuguesa </label>
