--- a/html/index.html
+++ b/html/index.html
@@ -69,10 +69,10 @@
         <label><input type="checkbox" name="golf"> Golf </label><br>
         <label><input type="checkbox" name="natacion"> Natación </label><br>
         Nacionalidad <br>
-        <label><input type="radio" name="nacionalidad">Italiana </label>
-        <label><input type="radio" name="nacionalidad"> Portuguesa </label>
-        <label><input type="radio" name="nacionalidad"> Rusa </label>
-        <label><input type="radio" name="nacionalidad"> Argentina </label>
+        <label><input type="radio" name="nacionalidad" value="italiana">Italiana</label>
+        <label><input type="radio" name="nacionalidad" value="portugesa"> Portuguesa</label>
+        <label><input type="radio" name="nacionalidad" value="rusa"> Rusa</label>
+        <label><input type="radio" name="nacionalidad" value="argentina"> Argentina</label>
 
         <br>
 
@@ -84,6 +84,9 @@
             <option value="lugo"> Lugo</option>
         </select>
     </form>
+    <button type="button">Enviar
+
+    </button><br>
     <textarea>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit aut suscipit est pariatur illo? Dolore optio libero consectetur qui quidem repudiandae, repellat nobis veritatis, quasi, harum inventore quisquam. Veniam, quaerat!
 </textarea><br>
