--- a/html/index.html
+++ b/html/index.html
@@ -59,7 +59,7 @@
         <label> Nombre: <input type="text" name="Nombre"></label>
         <label> DNI: <input type="text" name="DNI" pattern="[0-9]{8}[A-Z]{1}"></label>
         <label> Edad: <input type="number" value="Edad"></label>
-        <label> Fecha: <input type="datetime"><br></label>
+        <label> Fecha: <input type="date"><br></label>
 
 
         Selecciona un deporte: <br>
