--- a/html/index.html
+++ b/html/index.html
@@ -12,80 +12,81 @@
 <body>
     <h1>soy h1</h1>
     <h2>soy h2</h2>
-    <h3>soy h3<h3>
-            <h4>soy h4</h4>
-            <h5>soy h5</h5>
-            <h6>soy h6</h6>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro reprehenderit eaque magnam dignissimos
-                inventore cum tempora eius atque repellendus cumque facere et, dicta molestiae cupiditate consectetur
-                praesentium suscipit ad necessitatibus!</p>
-            <table border="2">
-                <tr>
-                    <td colspan="2">oscar</td>
-                    <td>oscar</td>
+    <h3>soy h3</h3>
+    <h4>soy h4</h4>
+    <h5>soy h5</h5>
+    <h6>soy h6</h6>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro reprehenderit eaque magnam dignissimos
+        inventore cum tempora eius atque repellendus cumque facere et, dicta molestiae cupiditate consectetur
+        praesentium suscipit ad necessitatibus!</p>
+    <table border="2">
+        <tr>
+            <td colspan="2">oscar</td>
+            <td>oscar</td>
 
-                </tr>
-                <tr>
-                    <td>oscar</td>
-                    <td>oscar</td>
-                    <td>oscar</td>
-                </tr>
-                <tr>
-                    <td rowspan="2">oscar</td>
-                    <td>oscar</td>
-                    <td>oscar</td>
-                </tr>
-                <tr>
-                    <td>oscar</td>
-                    <td>oscar</td>
-                </tr>
+        </tr>
+        <tr>
+            <td>oscar</td>
+            <td>oscar</td>
+            <td>oscar</td>
+        </tr>
+        <tr>
+            <td rowspan="2">oscar</td>
+            <td>oscar</td>
+            <td>oscar</td>
+        </tr>
+        <tr>
+            <td>oscar</td>
+            <td>oscar</td>
+        </tr>
 
-            </table><br><br><br>
-            <ol>
-                FRUTAS
-                <li>Naranja</li>
-                <li>Manzana</li>
-                <li>Kiwi</li>
-                <li>Pera</li>
-                <li>Mandarina</li>
-            </ol>
-            <form>
-                <action="ejemplo.es" metod="get">
-                    </action>
-                    Nombre:<input type="text" name="Nombre"><br>
-                    DNI:<input type="text" name="dni" pattern="[0-9]{8}[A-Z]{1}" size="9"><br>
-                    Edad:<input type="number" name="edad"><br>
-                    Fecha Nacimiento:<input type="date" name="Fecha"><br>
-            </form><br><br><br>
-            SELECCIONA DEPORTES: <br>
-            Natación <input name="deportes" type="checkbox"><br>
-            Ciclismo <input name="deportes" type="checkbox"><br>
-            Futbol <input name="deportes" type="checkbox"><br>
-            Baloncesto <input name="deportes" type="checkbox"> <br>
-            Boleisbol <input name="deportes" type="checkbox"><br>
-            <br><br><br>
-            NACIONALIDAD: <br>
-            Española <input type="radio" name="nacionalidad" value="españa">
-            Americano <input type="radio" name="nacionalidad" value="americano">
-            Frances <input type="radio" name="nacionalidad" value="frances">
-            Italiano <input type="radio" name="nacionalidad" value="italiano">
-            Portugués <input type="radio" name="nacionalidad" value="portugues">
-            <br><br><br>
-            SELECCIONES CIUDAD
-            <select name="ciudades">
-                <option value="0">elige una ciudad</option>
-                <option value="Madrid">Madrid</option>
-                <option value="barcelona">Barcelona</option>
-                <option value="sevilla">Sevilla</option>
-                <option value="valencia">Valencia</option>
-                <option value="bilbao">Bilbao</option>
+    </table><br><br><br>
+    <ol>
+        FRUTAS
+        <li>Naranja</li>
+        <li>Manzana</li>
+        <li>Kiwi</li>
+        <li>Pera</li>
+        <li>Mandarina</li>
+    </ol>
+    <form>
+        <action="ejemplo.es" metod="get">
+            </action>
+            Nombre:<input type="text" name="Nombre"><br>
+            DNI:<input type="text" name="dni" pattern="[0-9]{8}[A-Z]{1}" size="9"><br>
+            Edad:<input type="number" name="edad"><br>
+            Fecha Nacimiento:<input type="date" name="Fecha"><br>
+    </form><br><br><br>
+    SELECCIONA DEPORTES: <br>
+    Natación <input name="natacion" type="checkbox"><br>
+    Ciclismo <input name="ciclismo" type="checkbox"><br>
+    Futbol <input name="futbol" type="checkbox"><br>
+    Baloncesto <input name="baloncesto" type="checkbox"> <br>
+    Boleisbol <input name="boleisbol" type="checkbox"><br>
+    <br><br><br>
+    NACIONALIDAD: <br>
+    Española <input type="radio" name="nacionalidad" value="española">
+    Americano <input type="radio" name="nacionalidad" value="americano">
+    Frances <input type="radio" name="nacionalidad" value="frances">
+    Italiano <input type="radio" name="nacionalidad" value="italiano">
+    Portugués <input type="radio" name="nacionalidad" value="portugues">
+    <br><br><br>
+    SELECCIONES CIUDAD
+    <select name="ciudades">
+        <option value="0">elige una ciudad</option>
+        <option value="Madrid">Madrid</option>
+        <option value="barcelona">Barcelona</option>
+        <option value="sevilla">Sevilla</option>
+        <option value="valencia">Valencia</option>
+        <option value="bilbao">Bilbao</option>
 
-            </select>
-            <br><br><br>
-            <textarea name="" id="" cols="30" rows="10">
+    </select>
+    <br><br><br>
+    <button type="button">ENVIAR</button><br>
+    <textarea name="" id="" cols="30" rows="10">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore accusamus magnam optio quaerat dicta, suscipit molestias eum minima nemo provident iure, nobis quo maxime doloribus quae quibusdam ullam et illum!
 </textarea>
 
-            <body>
+    <body>
 
 </html>
