--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,8 @@
     <h6>soy h6</h6>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro reprehenderit eaque magnam dignissimos
         inventore cum tempora eius atque repellendus cumque facere et, dicta molestiae cupiditate consectetur
-        praesentium suscipit ad necessitatibus!</p>
+        praesentium suscipit ad necessitatibus!
+    </p>
     <table border="2">
         <tr>
             <td colspan="2">oscar</td>
@@ -83,10 +84,10 @@
     </select>
     <br><br><br>
     <button type="button">ENVIAR</button><br>
-    <textarea name="" id="" cols="30" rows="10">
+    <textarea cols="30" rows="10">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore accusamus magnam optio quaerat dicta, suscipit molestias eum minima nemo provident iure, nobis quo maxime doloribus quae quibusdam ullam et illum!
-</textarea>
-
-    <body>
+    </textarea>
+    
+</body>
 
 </html>
