--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
         <li>Plátano</li>
         <li>Fresa</li>
     </ol><br>
-    <form action="">
+    <form action="hotwheels.com" method="get">
         <label> Nombre: <input type="text" name="Nombre"></label>
         <label> DNI: <input type="text" name="DNI" pattern="[0-9]{8}[A-Z]{1}"></label>
         <label> Edad: <input type="number" value="Edad"></label>
