--- a/html/index.html
+++ b/html/index.html
@@ -50,13 +50,12 @@
         <li>Pera</li>
         <li>Mandarina</li>
     </ol>
-    <form>
-        <action="ejemplo.es" metod="get">
-            </action>
-            Nombre:<input type="text" name="Nombre"><br>
-            DNI:<input type="text" name="dni" pattern="[0-9]{8}[A-Z]{1}" size="9"><br>
-            Edad:<input type="number" name="edad"><br>
-            Fecha Nacimiento:<input type="date" name="Fecha"><br>
+    <form action="ejemplo.es" metod="get">
+
+        Nombre:<input type="text" name="Nombre"><br>
+        DNI:<input type="text" name="dni" pattern="[0-9]{8}[A-Z]{1}" size="9"><br>
+        Edad:<input type="number" name="edad"><br>
+        Fecha Nacimiento:<input type="date" name="Fecha"><br>
     </form><br><br><br>
     SELECCIONA DEPORTES: <br>
     Natación <input name="natacion" type="checkbox"><br>
@@ -87,7 +86,7 @@
     <textarea cols="30" rows="10">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore accusamus magnam optio quaerat dicta, suscipit molestias eum minima nemo provident iure, nobis quo maxime doloribus quae quibusdam ullam et illum!
     </textarea>
-    
+
 </body>
 
 </html>
