--- a/html/index.html
+++ b/html/index.html
@@ -84,7 +84,7 @@
             <option value="lugo"> Lugo</option>
         </select>
     </form>
-    <button type="button">Enviar
+    <button type="submit">Enviar
 
     </button><br>
     <textarea>
