--- a/html/index.html
+++ b/html/index.html
@@ -82,7 +82,7 @@
 
     </select>
     <br><br><br>
-    <button type="button">ENVIAR</button><br>
+    <button type="submit">ENVIAR</button><br>
     <textarea cols="30" rows="10">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore accusamus magnam optio quaerat dicta, suscipit molestias eum minima nemo provident iure, nobis quo maxime doloribus quae quibusdam ullam et illum!
     </textarea>
